Update images to use uploadcare

--- a/resources/public/content/about-us.html
+++ b/resources/public/content/about-us.html
@@ -23,7 +23,7 @@
     </section>
 
     <section class="col-12 col-6-on-tb-dt">
-      <img class="block col-12" src="<%= (url "/images/about/stylist_installing_mayvenn_blonde_hair.png") %>" alt="Stylist installing Mayvenn Blonde Hair" />
+      <img class="block col-12" src="//ucarecdn.com/cc133dac-424b-4699-a27b-27cc6286019b/-/format/auto/stylist_installing_mayvenn_blonde_hair.png" alt="Stylist installing Mayvenn Blonde Hair" />
     </section>
   </div>
 
@@ -66,29 +66,34 @@
     <div class="mx-auto" style="max-width: 40em;">
       <p class="my3">My name is Diishan Imira, I am the founder and CEO of Mayvenn.
         I grew up watching hairstylists in my family run their businesses, and I noticed something…
-        all of the hair products that our community was buying – we weren’t selling. </p>
+        all of the hair products that our community was buying – we weren’t selling.
+      </p>
 
       <p class="my3">That didn’t sit right with me. </p>
 
       <p class="my3">Mayvenn began with the idea that if people of color are spending billions of dollars on beauty products,
         we should also have ownership in the businesses that sell those products.
-        Furthermore, those products should be of the highest quality and delivered with world-class customer service. </p>
+        Furthermore, those products should be of the highest quality and delivered with world-class customer service.
+      </p>
 
       <p class="my3"> We created the Mayvenn platform so that the salons and hairstylists in
         our community could be the retailers of these products, allowing their
         customers to shop in a dignified way, while receiving the best
-        products and service for their hard-earned money. </p>
+        products and service for their hard-earned money.
+      </p>
 
       <p class="my3">This company started with a box of hair in the trunk of my Toyota Corolla.
         It has now grown into a nationwide movement of over 50,000 stylists, hundreds of thousands of customers,
-        and millions of dollars invested back into salons in our neighborhoods. </p>
+        and millions of dollars invested back into salons in our neighborhoods.
+      </p>
 
       <p class="my3">The path of entrepreneurship is difficult, but there is no better reward – nothing more beautiful,
         than living life independently and on your own terms.
-        This is what I want for my community, and Mayvenn is my way of supporting that. </p>
+        This is what I want for my community, and Mayvenn is my way of supporting that.
+      </p>
 
       <p class="mt3 mb2">Happy Shopping!</p>
-      <img src="<%= (url "/images/about/diishan-signature.png") %>" alt="Diishan Imira, CEO of Mayvenn" />
+      <img src="//ucarecdn.com/efffbfc6-5932-4faf-9030-39a1f303f758/-/format/auto/diishansignature.png" alt="Diishan Imira, CEO of Mayvenn" />
       <p>Diishan Imira,<br/>CEO Mayvenn</p>
     </div>
   </section>
@@ -105,7 +110,7 @@
     </section>
 
     <section class="col-12 col-6-on-tb-dt">
-      <img class="block col-12" src="<%= (url "/images/about/mayvenn_hair_extensions.png") %>" alt="Mayvenn Hair Extensions" />
+      <img class="block col-12" src="//ucarecdn.com/b2f575f9-a443-42ca-a2fe-de4be7a6966c/-/format/auto/mayvenn_hair_extensions.png" alt="Mayvenn Hair Extensions" />
     </section>
   </div>
 
@@ -126,7 +131,7 @@
     </section>
 
     <section class="order-0 col-12 col-6-on-tb-dt">
-      <img class="block col-12" src="<%= (url "/images/about/mayvenn_curly_hair_extensions.png") %>" alt="Mayvenn Curly Hair Extensions" />
+      <img class="block col-12" src="//ucarecdn.com/e57d9a5c-5600-4e48-9ffd-7fd7cb4b8be6/-/format/auto/mayvenn_curly_hair_extensions.png" alt="Mayvenn Curly Hair Extensions" />
     </section>
   </div>
 
@@ -134,9 +139,9 @@
     <div class="col-on-tb-dt col-4-on-tb-dt px2">
       <div class="mt2 mx-auto circle overflow-hidden" style="width: 128px; height: 128px ">
         <img style="width: 128px; height: 128px; object-fit: cover;"
-             class="block"
-             src="<%= (url "/images/about/mayvenn_stylist_briana.png") %>"
-             alt="Briana" />
+        class="block"
+        src="//ucarecdn.com/900396b3-cf54-4a3e-be60-1e2b10c25964/-/format/auto/mayvenn_stylist_briana.png"
+        alt="Briana" />
       </div>
       <blockquote class="my2 m0">
         “The quality of hair is amazing and the Quality Guarantee makes it a no risk purchase
@@ -150,9 +155,9 @@
     <div class="col-on-tb-dt col-4-on-tb-dt px2">
       <div class="mt2 mx-auto circle overflow-hidden" style="width: 128px; height: 128px ">
         <img style="width: 128px; height: 128px; object-fit: cover;"
-             class="block"
-             src="<%= (url "/images/about/mayvenn_stylist_jadore_allure.png") %>"
-             alt="Jadore Allure" />
+        class="block"
+        src="//ucarecdn.com/edea45f0-66fa-45c0-8a13-8e8d398ec233/-/format/auto/mayvenn_stylist_jadore_allure.png<"
+        alt="Jadore Allure" />
       </div>
       <blockquote class="my2 m0">
         “The hair is absolutely gorgeous.
@@ -168,9 +173,9 @@
     <div class="col-on-tb-dt col-4-on-tb-dt px2">
       <div class="mt2 mx-auto circle overflow-hidden" style="width: 128px; height: 128px ">
         <img style="width: 128px; height: 128px; object-fit: cover;"
-             class="block"
-             src="<%= (url "/images/about/mayvenn_stylist_cara_scott.png") %>"
-             alt="Cara Scott" />
+        class="block"
+        src="//ucarecdn.com/9fa411f5-6c16-49cb-92b3-e2c044604acc/-/format/auto/mayvenn_stylist_cara_scott.png"
+        alt="Cara Scott" />
       </div>
       <blockquote class="my2 m0">
         “This hair has held up unlike anything I’ve ever seen.
