Make links teal on Our Hair content page

--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -247,11 +247,11 @@
                 <p>
                     We don’t recommend bleaching or coloring this hair. However, if
                     you’re feening for some peroxide, take a look at
-                    <a href="https://shop.mayvenn.com/categories/16-dyed-virgin-hair?color=blonde~blonde-dark-roots~dark-blonde-dark-roots~dark-blonde?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink">
+                    <a href="https://shop.mayvenn.com/categories/16-dyed-virgin-hair?color=blonde~blonde-dark-roots~dark-blonde-dark-roots~dark-blonde?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink" class="teal">
                         our blonde extensions
                     </a>
                     or
-                    <a href="https://shop.mayvenn.com/shop/look?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink">
+                    <a href="https://shop.mayvenn.com/shop/look?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink" class="teal">
                         our unprocessed virgin extensions
                     </a>.
                 </p>
@@ -266,7 +266,7 @@
             <div class="max-580 mx-auto center px3">
                 <h2 class="mb2-on-mb">Any More Questions?</h2>
                 <p class="mb4">
-                    Still confused about the difference between the hair we offer? Call us at 1 (888) 562-7952 or send us an email at <a href="mailto:help@mayvenn.com">help@mayvenn.com</a>. We’re happy to help answer any of your questions!
+                    Still confused about the difference between the hair we offer? Call us at 1 (888) 562-7952 or send us an email at <a href="mailto:help@mayvenn.com" class="teal">help@mayvenn.com</a>. We’re happy to help answer any of your questions!
                 </p>
             </div>
         </section>
