Remove extraneous space

--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -251,9 +251,7 @@
                         our blonde extensions
                     </a>
                     or
-                    <a href="https://shop.mayvenn.com/shop/look?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink" class="teal">
-                        our unprocessed virgin extensions
-                    </a>.
+                    <a href="https://shop.mayvenn.com/shop/look?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink" class="teal">our unprocessed virgin extensions</a>.
                 </p>
             </div>
         </section>
