Don't hardcode to shop.mayvenn.com on Our Hair page

--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -247,11 +247,11 @@
                 <p>
                     We don’t recommend bleaching or coloring this hair. However, if
                     you’re feening for some peroxide, take a look at
-                    <a href="https://shop.mayvenn.com/categories/16-dyed-virgin-hair?color=blonde~blonde-dark-roots~dark-blonde-dark-roots~dark-blonde?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink" class="teal">
+                    <a href="/categories/16-dyed-virgin-hair?color=blonde~blonde-dark-roots~dark-blonde-dark-roots~dark-blonde?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink" class="teal">
                         our blonde extensions
                     </a>
                     or
-                    <a href="https://shop.mayvenn.com/shop/look?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink" class="teal">our unprocessed virgin extensions</a>.
+                    <a href="/shop/look?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink" class="teal">our unprocessed virgin extensions</a>.
                 </p>
             </div>
         </section>
