Use CSS position:sticky to make headers stick on Our Hair page

--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -102,8 +102,9 @@
 
         <section class="px3 pb3 center hide-on-tb-dt">
             <h2 class="pb2">Comparing Our Hair</h2>
-            <div class="flex justify-center">
-                <div class="clearfix center flex items-center justify-between">
+            <div class="flex justify-center bg-white"
+                 style="position: -webkit-sticky; position: sticky; top: 0px;">
+                <div class="clearfix center flex items-center justify-between border-bottom border-dark-silver border-width-2">
                     <p class="col col-4 center h3">Virgin</p>
                     <p class="col col-4 center h3 border-dark-silver border-width-2 border-left border-right px1 my2">
                         Dyed Virgin
@@ -112,7 +113,7 @@
                 </div>
             </div>
 
-            <h2 class="pt6 pb2 border-top border-dark-silver border-width-2">Is it unprocessed?</h2>
+            <h2 class="pt6 pb2">Is it unprocessed?</h2>
             <div class="flex justify-center">
                 <div class="clearfix flex justify-between center" style="width:312px">
                     <div class="col col-4 flex items-center justify-center bg-light-silver" style="height:103px">
