Move things around on Our Hair page

--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -211,28 +211,6 @@
 
             </div>
         </section>
-        <section class="center">
-            <picture class="m6">
-                <source media="(min-width: 750px)" srcset="//ucarecdn.com/2b251802-bd8a-44c3-93cd-7222c16cc627/ourhairhumanhair.png 1x, //ucarecdn.com/2b251802-bd8a-44c3-93cd-7222c16cc627/ourhairhumanhair.png 2x" />
-                <img alt="Human Hair" class="block col-12" srcset="//ucarecdn.com/02ae585c-99b8-4180-952a-eac88b9542c4/ourhairhumanhair.png 2x" src="//ucarecdn.com/02ae585c-99b8-4180-952a-eac88b9542c4/ourhairhumanhair.png" />
-            </picture>
-            <div class="max-580 mx-auto center px3">
-                <h2 class="mb2-on-mb"> What Is Human Hair? </h2>
-                <p class="mb4">
-                    Human hair has been collected from multiple donors
-                    meaning the hair on one bundle may have come from multiple
-                    heads. It is typically non-remy, meaning the cuticles on the
-                    hair strands tend to go in different directions. However, we’re
-                    happy to say Mayvenn carries 100% machine remy human hair (the
-                    100% is important – you won’t find random strands of horse or
-                    goat hair in the mix, we promise!) that has been pre-colored for
-                    your convenience.
-                </p>
-                <p>
-                    Human hair is great if you’re looking for a quick vacation look, a temporary in-between style, or for those on a budget who want to save a few coins. Rest assured in knowing we offer the highest quality human hair extensions on the market at an affordable price.
-                </p>
-            </div>
-        </section>
 
         <section class="center">
             <picture class="m6">
@@ -253,6 +231,29 @@
                     </a>
                     or
                     <a href="/shop/look?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink" class="teal">our unprocessed virgin extensions</a>.
+                </p>
+            </div>
+        </section>
+
+        <section class="center">
+            <picture class="m6">
+                <source media="(min-width: 750px)" srcset="//ucarecdn.com/2b251802-bd8a-44c3-93cd-7222c16cc627/ourhairhumanhair.png 1x, //ucarecdn.com/2b251802-bd8a-44c3-93cd-7222c16cc627/ourhairhumanhair.png 2x" />
+                <img alt="Human Hair" class="block col-12" srcset="//ucarecdn.com/02ae585c-99b8-4180-952a-eac88b9542c4/ourhairhumanhair.png 2x" src="//ucarecdn.com/02ae585c-99b8-4180-952a-eac88b9542c4/ourhairhumanhair.png" />
+            </picture>
+            <div class="max-580 mx-auto center px3">
+                <h2 class="mb2-on-mb"> What Is 100%Human Hair? </h2>
+                <p class="mb4">
+                    Human hair has been collected from multiple donors
+                    meaning the hair on one bundle may have come from multiple
+                    heads. It is typically non-remy, meaning the cuticles on the
+                    hair strands tend to go in different directions. However, we’re
+                    happy to say Mayvenn carries 100% machine remy human hair (the
+                    100% is important – you won’t find random strands of horse or
+                    goat hair in the mix, we promise!) that has been pre-colored for
+                    your convenience.
+                </p>
+                <p>
+                    Human hair is great if you’re looking for a quick vacation look, a temporary in-between style, or for those on a budget who want to save a few coins. Rest assured in knowing we offer the highest quality human hair extensions on the market at an affordable price.
                 </p>
             </div>
         </section>
