Typos, word-wrap

--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -241,7 +241,7 @@
                 <img alt="Human Hair" class="block col-12" srcset="//ucarecdn.com/02ae585c-99b8-4180-952a-eac88b9542c4/ourhairhumanhair.png 2x" src="//ucarecdn.com/02ae585c-99b8-4180-952a-eac88b9542c4/ourhairhumanhair.png" />
             </picture>
             <div class="max-580 mx-auto center px3">
-                <h2 class="mb2-on-mb"> What Is 100%Human Hair? </h2>
+                <h2 class="mb2-on-mb"> What Is 100% Human Hair? </h2>
                 <p class="mb4">
                     Human hair has been collected from multiple donors
                     meaning the hair on one bundle may have come from multiple
@@ -253,7 +253,10 @@
                     your convenience.
                 </p>
                 <p>
-                    Human hair is great if you’re looking for a quick vacation look, a temporary in-between style, or for those on a budget who want to save a few coins. Rest assured in knowing we offer the highest quality human hair extensions on the market at an affordable price.
+                    Human hair is great if you’re looking for a quick vacation look,
+                    a temporary in-between style, or for those on a budget who want
+                    to save a few coins. Rest assured in knowing we offer the highest
+                    quality human hair extensions on the market at an affordable price.
                 </p>
             </div>
         </section>
