Replace hero with youtube video
[Finishes #154933037]

Co-authored-by: Justin Watt <justinw@mayvenn.com>

--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -1,15 +1,14 @@
 <div>
-    <section class="px3 py4 bg-cover bg-storefront-our-hair flex">
-        <div class="container self-center">
-            <div class="flex items-center">
-                <div class="mx-auto white center">
-                    <h1 class="py4 h0">
-                        <span class="hide-on-mb">Our Hair</span>
-                        <span class="hide-on-tb-dt">Our Hair</span>
-                    </h1>
-                </div>
-            </div>
-        </div>
+  <section class="container self-center">
+    <div class="col-12 relative" style="height: 0; padding-bottom: 56.25%">
+      <iframe
+        class="col-12 absolute left-0 top-0"
+        style="height: 100%"
+        frameborder="0" allowfullscreen="true"
+        src="https://www.youtube.com/embed/xSA_7hTH2Fg?rel=0&color=white&showinfo=0">
+      </iframe>
+    </div>
+  </section>
     </section>
     <div class="mx-auto max-960">
         <section class="px3 py6 center">
