Update to longer video for our hair page
[#154933037]

Co-authored-by: Justin Watt <justinw@mayvenn.com>

--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -5,7 +5,7 @@
         class="col-12 absolute left-0 top-0"
         style="height: 100%"
         frameborder="0" allowfullscreen="true"
-        src="https://www.youtube.com/embed/xSA_7hTH2Fg?rel=0&color=white&showinfo=0">
+        src="https://www.youtube.com/embed/ULy1loPoR0w?rel=0&color=white&showinfo=0">
       </iframe>
     </div>
   </section>
