Retain button styling on contact page
[#157166800]

Co-authored-by: Justin Watt <justinw@mayvenn.com>

--- a/resources/public/content/help.html
+++ b/resources/public/content/help.html
@@ -14,7 +14,7 @@
             </div>
             <div class="my2 flex flex-wrap justify-center border-bottom border-top border-gray py2">
                 <div class="flex">
-                    <a class="dark-gray btn btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="http://help.mayvenn.com" style="height:134px;width:142px;" target="_blank">
+                    <a class="dark-gray btn rounded btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="http://help.mayvenn.com" style="height:134px;width:142px;" target="_blank">
                         <div class="flex flex-column justify-between items-center">
                             <svg style="width: 44px; height: 52px" class="stroke-teal fill-teal light mb1">
                               <use xlink:href="#faqs"></use>
@@ -23,7 +23,7 @@
                             <p class="h6 navy medium letter-spacing-0">Visit our help center</p>
                         </div>
                     </a>
-                    <a class="dark-gray btn btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="tel://+18885627952" style="height:134px;width:142px;">
+                    <a class="dark-gray btn rounded btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="tel://+18885627952" style="height:134px;width:142px;">
                         <div class="flex flex-column justify-between items-center">
                             <svg style="width: 52px; height: 52px" class="stroke-teal fill-teal light mb1">
                               <use xlink:href="#phone-ringing"></use>
@@ -34,7 +34,7 @@
                     </a>
                 </div>
                 <div class="flex">
-                    <a class="dark-gray btn btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="sms:34649" style="height:134px;width:142px;">
+                    <a class="dark-gray btn rounded btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="sms:34649" style="height:134px;width:142px;">
                         <div class="flex flex-column justify-between items-center">
                             <svg style="width: 52px; height: 52px" class="stroke-teal fill-teal light mb1">
                               <use xlink:href="#message-bubble"></use>
@@ -43,7 +43,7 @@
                             <p class="h6 navy medium letter-spacing-0">34649</p>
                         </div>
                     </a>
-                    <a class="dark-gray btn btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="mailto:help@mayvenn.com" style="height:134px;width:142px;">
+                    <a class="dark-gray btn rounded btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="mailto:help@mayvenn.com" style="height:134px;width:142px;">
                         <div class="flex flex-column justify-between items-center">
                             <svg style="width: 52px; height: 52px" class="stroke-teal fill-teal light mb1">
                               <use xlink:href="#closed-mail-envelope"></use>
