--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -1,13 +1,9 @@
 <div>
   <section class="container self-center">
-    <div class="col-12 relative" style="height: 0; padding-bottom: 56.25%">
-      <iframe
-        class="col-12 absolute left-0 top-0"
-        style="height: 100%"
-        frameborder="0" allowfullscreen="true"
-        src="https://www.youtube.com/embed/ULy1loPoR0w?rel=0&color=white&showinfo=0">
-      </iframe>
-    </div>
+    <picture class="m6">
+        <source media="(min-width: 750px)" srcset="//ucarecdn.com/2b251802-bd8a-44c3-93cd-7222c16cc627/ourhairhumanhair.png 1x, //ucarecdn.com/2b251802-bd8a-44c3-93cd-7222c16cc627/ourhairhumanhair.png 2x" />
+        <img alt="Human Hair" class="block col-12" srcset="//ucarecdn.com/02ae585c-99b8-4180-952a-eac88b9542c4/ourhairhumanhair.png 2x" src="//ucarecdn.com/02ae585c-99b8-4180-952a-eac88b9542c4/ourhairhumanhair.png" />
+    </picture>
   </section>
   <div class="mx-auto max-960">
     <section class="px3 py6 center">
@@ -31,7 +27,6 @@
           <p class="col col-3"></p>
           <p class="col col-3 center h3">Virgin</p>
           <p class="col col-3 center h3 px1 my2">Dyed Virgin</p>
-          <p class="col col-3 center h3">Dyed 100% Human</p>
         </div>
       </div>
 
@@ -42,7 +37,6 @@
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
           <div class="col col-3 mx1 bg-light-silver" style="height:100px"></div>
-          <div class="col col-3 bg-light-silver" style="height:100px"></div>
         </div>
       </div>
 
@@ -53,7 +47,6 @@
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
           <div class="col col-3 mx1 bg-light-silver" style="height:100px"></div>
-          <div class="col col-3 bg-light-silver" style="height:100px"></div>
         </div>
       </div>
 
@@ -64,7 +57,6 @@
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
           <div class="col col-3 mx1 bg-light-silver" style="height:100px"></div>
-          <div class="col col-3 bg-light-silver" style="height:100px"></div>
         </div>
       </div>
 
@@ -78,7 +70,6 @@
           <div class="col col-3 flex mx1 items-center justify-center bg-light-silver" style="height:100px">
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
-          <div class="col col-3 bg-light-silver" style="height:100px"></div>
         </div>
       </div>
 
@@ -91,9 +82,6 @@
           <div class="col col-3 flex mx1 items-center justify-center bg-light-silver" style="height:100px">
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
-          <div class="col col-3 flex items-center justify-center bg-light-silver" style="height:100px">
-            <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
-          </div>
         </div>
       </div>
     </section>
@@ -104,10 +92,9 @@
         style="position: -webkit-sticky; position: sticky; top: 0px;">
         <div class="clearfix center flex items-center justify-between border-bottom border-dark-silver border-width-2">
           <p class="col col-4 center h3">Virgin</p>
-          <p class="col col-4 center h3 border-dark-silver border-width-2 border-left border-right px1 my2">
+          <p class="col col-5 center h3 border-dark-silver border-width-2 border-left px4 my2">
             Dyed Virgin
           </p>
-          <p class="col col-4 center h3">Dyed 100% Human</p>
         </div>
       </div>
 
@@ -118,7 +105,6 @@
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
           <div class="col col-4 mx1 bg-light-silver" style="height:103px"></div>
-          <div class="col col-4 bg-light-silver" style="height:103px"></div>
         </div>
       </div>
 
@@ -129,7 +115,6 @@
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
           <div class="col col-4 mx1 bg-light-silver" style="height:103px"></div>
-          <div class="col col-4 bg-light-silver" style="height:103px"></div>
         </div>
       </div>
 
@@ -140,7 +125,6 @@
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
           <div class="col col-4 mx1 bg-light-silver" style="height:103px"></div>
-          <div class="col col-4 bg-light-silver" style="height:103px"></div>
         </div>
       </div>
 
@@ -153,7 +137,6 @@
           <div class="col col-4 mx1 flex items-center justify-center bg-light-silver" style="height:103px">
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
-          <div class="col col-4 bg-light-silver" style="height:103px"></div>
         </div>
       </div>
 
@@ -164,9 +147,6 @@
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
           <div class="col col-4 mx1 flex items-center justify-center bg-light-silver" style="height:103px">
-            <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
-          </div>
-          <div class="col col-4 flex items-center justify-center bg-light-silver" style="height:103px">
             <img style="height: 47px; width: 61px" alt="check" srcset="//ucarecdn.com/b91d5bfb-2fb8-4a45-b7bc-3fad4a41ca9e/check.png 2x" src="//ucarecdn.com/689200b2-68a7-49eb-a2ec-812880c8567c/check.png" />
           </div>
         </div>
@@ -229,32 +209,6 @@
           </a>
           or
           <a href="/shop/look?utm_source=link&utm_medium=OurHair&utm_campaign=OurHairLink" class="teal">our unprocessed virgin extensions</a>.
-        </p>
-      </div>
-    </section>
-
-    <section class="center">
-      <picture class="m6">
-        <source media="(min-width: 750px)" srcset="//ucarecdn.com/2b251802-bd8a-44c3-93cd-7222c16cc627/ourhairhumanhair.png 1x, //ucarecdn.com/2b251802-bd8a-44c3-93cd-7222c16cc627/ourhairhumanhair.png 2x" />
-        <img alt="Human Hair" class="block col-12" srcset="//ucarecdn.com/02ae585c-99b8-4180-952a-eac88b9542c4/ourhairhumanhair.png 2x" src="//ucarecdn.com/02ae585c-99b8-4180-952a-eac88b9542c4/ourhairhumanhair.png" />
-      </picture>
-      <div class="max-580 mx-auto center px3">
-        <h2 class="mb2-on-mb"> What Is 100% Human Hair? </h2>
-        <p class="mb4">
-          Human hair has been collected from multiple donors
-          meaning the hair on one bundle may have come from multiple
-          heads. It is typically non-remy, meaning the cuticles on the
-          hair strands tend to go in different directions. However, we’re
-          happy to say Mayvenn carries 100% machine remy human hair (the
-          100% is important – you won’t find random strands of horse or
-          goat hair in the mix, we promise!) that has been pre-colored for
-          your convenience.
-        </p>
-        <p>
-          Human hair is great if you’re looking for a quick vacation look,
-          a temporary in-between style, or for those on a budget who want
-          to save a few coins. Rest assured in knowing we offer the highest
-          quality human hair extensions on the market at an affordable price.
         </p>
       </div>
     </section>
