Update Hair Page Copy - No Single Donor
Our hair is not 'single donor' so we have removed that copy from this page

--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -164,11 +164,10 @@
         <h2 class="mb2-on-mb"> What Is Virgin Hair? </h2>
         <p class="mb4">
           Virgin hair is human hair that is unprocessed and unaltered.
-          It is collected from a single donor, and has not been dyed,
-          permed, bleached, or treated with any chemicals. To achieve
-          different textures, Mayvenn gently steam processes the hair to
-          create beautiful, bouncy waves and curls in an array of
-          textures.
+          It has not been dyed, permed, bleached, or treated with any 
+          chemicals. To achieve different textures, Mayvenn gently steam 
+          processes the hair to create beautiful, bouncy waves and curls 
+          in an array of textures.
         </p>
         <p class="mb4">
           “Remy” is a mysterious word that’s used often, but never
