Update placeholder text color for email capture; Add dark-silver color
Dark silver is now what silver was. Silver is now #aaa (for the placeholder text
color).

[#167055832]

Co-authored-by: Jeff Hui <jeff@mayvenn.com>

--- a/resources/public/content/our-hair.html
+++ b/resources/public/content/our-hair.html
@@ -90,9 +90,9 @@
       <h2 class="pb2">Comparing Our Hair</h2>
       <div class="flex justify-center bg-white"
         style="position: -webkit-sticky; position: sticky; top: 0px;">
-        <div class="clearfix center flex items-center justify-between border-bottom border-dark-silver border-width-2">
+        <div class="clearfix center flex items-center justify-between border-bottom border-silver border-width-2">
           <p class="col col-4 center h3">Virgin</p>
-          <p class="col col-5 center h3 border-dark-silver border-width-2 border-left px4 my2">
+          <p class="col col-5 center h3 border-silver border-width-2 border-left px4 my2">
             Dyed Virgin
           </p>
         </div>
