Removing structured data (excluding product data) from non-about-us pages
[#168743094]

Co-authored-by: Heather Farley <heather@mayvenn.com>

--- a/resources/public/content/about-us.html
+++ b/resources/public/content/about-us.html
@@ -9,7 +9,7 @@
       “Hairstylists are some of the most important people we have. I want to give them the recognition they deserve.”
 
       <br/>
-      <cite class="h3 dark-gray regular py2 font-style-normal">- <span itemprop="founder">Diishan Imira</span>, Founder of Mayvenn</cite>
+      <cite class="h3 dark-gray regular py2 font-style-normal">- Diishan Imira, Founder of Mayvenn</cite>
     </blockquote>
   </section>
 
