Convert guarantee svg to webp
- It's smaller as webp (~6kb webp vs 7kb svg)
- It saves 7kb from every page load (not part of the sprited svgs)

--- a/resources/public/content/guarantee.html
+++ b/resources/public/content/guarantee.html
@@ -1,8 +1,6 @@
 <div class="dark-gray">
     <div class="bg-light-gray p4 center">
-        <svg style="width: 154px; height: 155px" class="fill-teal">
-          <use xlink:href="#guarantee"></use>
-        </svg>
+        <img src="https://ucarecdn.com/19ea9b16-4c27-4dc8-a8d3-544ca88ef38d/-/format/auto/-/resize/155x155/30dayguarantee.png" alt="30 Day Satisfaction Guarantee" />
     </div>
     <div class="container mx-auto p3">
         <div class="center dark-gray">
