WIP: colors- mostly teals

--- a/resources/public/content/about-us.html
+++ b/resources/public/content/about-us.html
@@ -1,7 +1,7 @@
 <div class="bg-white">
   <section class="bg-light-gray center p3">
     <h1 class="h2 py2 navy thin">about us</h1>
-    <svg style="width: 135px; height: 80px" class="stroke-teal">
+    <svg style="width: 135px; height: 80px" class="stroke-p-color">
       <use xlink:href="#interlocked-hearts"></use>
     </svg>
 
