--- a/resources/public/content/guarantee.html
+++ b/resources/public/content/guarantee.html
@@ -5,7 +5,7 @@
     <div class="container mx-auto p3">
         <div class="center dark-gray">
             <h1 class="h4 py2">We guarantee that you&apos;ll love Mayvenn hair!</h1>
-            <p class="py2">Buy <span class="teal shout medium">RISK FREE</span> with easy returns and exchanges.</p>
+            <p class="py2">Buy <span class="p-color shout medium">RISK FREE</span> with easy returns and exchanges.</p>
         </div>
         <div class="py2">
             <h2 class="h5 medium navy shout">EXCHANGES</h2>
