--- a/resources/public/content/help.html
+++ b/resources/public/content/help.html
@@ -16,7 +16,7 @@
                 <div class="flex">
                     <a class="dark-gray btn rounded btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="http://help.mayvenn.com" style="height:134px;width:142px;" target="_blank">
                         <div class="flex flex-column justify-between items-center">
-                            <svg style="width: 44px; height: 52px" class="stroke-teal fill-teal light mb1">
+                            <svg style="width: 44px; height: 52px" class="stroke-p-color light mb1">
                               <use xlink:href="#faqs"></use>
                             </svg>
                             <h3 class="h4 light dark-gray">FAQs</h3>
@@ -25,7 +25,7 @@
                     </a>
                     <a class="dark-gray btn rounded btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="tel://+18885627952" style="height:134px;width:142px;">
                         <div class="flex flex-column justify-between items-center">
-                            <svg style="width: 52px; height: 52px" class="stroke-teal fill-teal light mb1">
+                            <svg style="width: 52px; height: 52px" class="stroke-p-color light mb1">
                               <use xlink:href="#phone-ringing"></use>
                             </svg>
                             <h3 class="h4 light dark-gray">Call</h3>
@@ -36,7 +36,7 @@
                 <div class="flex">
                     <a class="dark-gray btn rounded btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="sms:34649" style="height:134px;width:142px;">
                         <div class="flex flex-column justify-between items-center">
-                            <svg style="width: 52px; height: 52px" class="stroke-teal fill-teal light mb1">
+                            <svg style="width: 52px; height: 52px" class="stroke-p-color light mb1">
                               <use xlink:href="#message-bubble"></use>
                             </svg>
                             <h3 class="h4 light dark-gray">Text</h3>
@@ -45,7 +45,7 @@
                     </a>
                     <a class="dark-gray btn rounded btn-outline border-gray pxp6 py2 m2-on-tb-dt m1" href="mailto:help@mayvenn.com" style="height:134px;width:142px;">
                         <div class="flex flex-column justify-between items-center">
-                            <svg style="width: 52px; height: 52px" class="stroke-teal fill-teal light mb1">
+                            <svg style="width: 52px; height: 52px" class="stroke-p-color light mb1">
                               <use xlink:href="#closed-mail-envelope"></use>
                             </svg>
                             <h3 class="h4 light dark-gray">Email</h3>
