Capitalize Titles in Contact Us

--- a/resources/public/content/help.html
+++ b/resources/public/content/help.html
@@ -1,7 +1,7 @@
 <div>
     <section>
         <div class="py4 bg-cool-gray center">
-            <h1 class="h2 mb2">get in touch</h1>
+            <h1 class="h2 mb2">Get In Touch</h1>
             <div class="h4 light">
                 <p>Have a problem?</p>
                 <p>Need advice on a style or product?</p>
@@ -59,7 +59,7 @@
         </div>
     </section>
     <section class="mx-auto col-10 mb4 mt3">
-        <h1 class="mb2 center">company information</h1>
+        <h1 class="mb2 center">Company Information</h1>
         <dl class="list-reset hide-on-tb-dt light">
             <dt class="inline-block mt2 medium">Headquarters: </dt>
             <dd class="inline ml0" itemprop="address">1714 Franklin St. Suite 100 #239, Oakland CA 94612</dd>
