--- a/resources/public/content/guarantee.html
+++ b/resources/public/content/guarantee.html
@@ -9,11 +9,11 @@
         </div>
         <div class="py2">
             <h2 class="h5 medium shout">EXCHANGES</h2>
-            <p>Wear it, dye it, even flat iron it. If you do not love your Mayvenn hair we will exchange it within 30 days of purchase. Just call us:<a class="medium block" href="tel:1-888-562-7952">1-888-562-7952</a></p>
+            <p>Wear it, dye it, even flat iron it. If you do not love your Mayvenn hair we will exchange it within 30 days of purchase. Just call us:<a class="medium block" href="tel:+18552876868">1-855-287-6868</a></p>
         </div>
         <div class="py2">
             <h2 class="h5 medium shout">RETURNS</h2>
-            <p>If you are not completely happy with your Mayvenn hair before it is installed, we will refund your purchase if the bundle is unopened and the hair is in its original condition. Just call us:<a class="medium block" href="tel:1-888-562-7952">1-888-562-7952</a></p>
+            <p>If you are not completely happy with your Mayvenn hair before it is installed, we will refund your purchase if the bundle is unopened and the hair is in its original condition. Just call us:<a class="medium block" href="tel:+18552876868">1-855-287-6868</a></p>
         </div>
     </div>
 </div>
