Standardize support phone number format

--- a/resources/public/content/help.html
+++ b/resources/public/content/help.html
@@ -29,7 +29,7 @@
                               <use xlink:href="#phone-ringing"></use>
                             </svg>
                             <h3 class="h4 light">Call</h3>
-                            <p class="h6 medium letter-spacing-0">+1 (855) 287-6868</p>
+                            <p class="h6 medium letter-spacing-0">1 (855) 287-6868</p>
                         </div>
                     </a>
                 </div>
@@ -64,7 +64,7 @@
             <dt class="inline-block mt2 medium">Headquarters: </dt>
             <dd class="inline ml0" itemprop="address">1714 Franklin St. Suite 100 #239, Oakland CA 94612</dd>
             <dt class="inline-block mt2 medium">Phone: </dt>
-            <dd class="inline ml0" content="+18552876868" itemprop="telephone">+1 (855) 287-6868</dd>
+            <dd class="inline ml0" content="+18552876868" itemprop="telephone">1 (855) 287-6868</dd>
             <dt class="inline-block mt2 medium">Website: </dt>
             <dd class="inline ml0" itemprop="url">https://mayvenn.com</dd>
         </dl>
@@ -72,7 +72,7 @@
             <dt class="inline-block mt2 medium">Headquarters: </dt>
             <dd class="inline ml0" itemprop="address">1714 Franklin St. Suite 100 #239, Oakland CA 94612</dd>
             <dt class="inline-block mt2 medium">Phone: </dt>
-            <dd class="inline ml0" content="+18552876868" itemprop="telephone">+1 (855) 287-6868</dd>
+            <dd class="inline ml0" content="+18552876868" itemprop="telephone">1 (855) 287-6868</dd>
             <dt class="inline-block mt2 medium">Website: </dt>
             <dd class="inline ml0" itemprop="url">https://mayvenn.com</dd>
         </dl>
