--- a/resources/public/content/privacy.html
+++ b/resources/public/content/privacy.html
@@ -144,8 +144,8 @@
         <br />
         <p class="ml4">Mayvenn, Inc.</p>
         <p class="ml4">ATTN:  Privacy</p>
-        <p class="ml4">1714 Franklin St., Suite 100 #239</p>
-        <p class="ml4">Oakland, CA 94612</p>
+        <p class="ml4">1900 Powell St., 7th Floor WeWork</p>
+        <p class="ml4">Emeryville CA, 94608</p>
     <br />
     <p>This request may be made no more than once per calendar year, and we reserve our right not to respond to requests submitted other than as set forth in this section. </p>
     <br />
@@ -171,8 +171,8 @@
         <br />
         <p class="ml4">Mayvenn, Inc.</p>
         <p class="ml4">ATTN:  Privacy</p>
-        <p class="ml4">1714 Franklin St., Suite 100 #239</p>
-        <p class="ml4">Oakland, CA 94612</p>
+        <p class="ml4">1900 Powell St., 7th Floor WeWork</p>
+        <p class="ml4">Emeryville CA, 94608</p>
         <br />
     <p>Because email communications are not always secure, please do not include credit card or other sensitive information in your emails to us.</p>
     <br />
